--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "gulp-open": "~1.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.1",
-    "gulp-uglify": "^1.5.1"
+    "gulp-uglify": "^1.5.1",
+    "gulp-watch": "^4.3.5"
   },
   "dependencies": {
     "jshint": "^2.9.1"
